fix: menu bottom spacing

--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -4,7 +4,7 @@
 .mobile-menu {
   // width: 80%;
   position: sticky;
-  bottom: 0;
+  bottom: 1rem;
   margin: $mobile-spacing-side;
   background-color: orange;
   border-radius: 1rem;
